fixed disappear bug
